# israel-bus-locator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
israel_bus_locator/: bus_location_data.py  bus_location_exploration.py  bus_utils.py
notebooks/: bus_location_exploration.ipynb  bus_utils_exploration.ipynb  getting all arrivals to all stops of a given line in a given day.ipynb  load siri vehicle locations to pandas dataframe.ipynb
tests/: conftest.py  test_bus_utils.py
